@@ -43,6 +43,11 @@ export("Adobe_glyphs", "HTMLheader", "Rd2HTML", "Rd2ex", "Rd2latex",
        "vignetteDepends", "vignetteEngine", "write_PACKAGES", 
        "xgettext", "xgettext2pot", "xngettext")
 
+export("check_packages_in_dir",
+       "summarize_check_packages_in_dir_depends",
+       "summarize_check_packages_in_dir_results",
+       "summarize_check_packages_in_dir_timings")
+
 export(".print.via.format")
 
 exportPattern("^SIG.+")
